Updated the deactivation logic
